text alignment issues on mobile

--- a/styles/components/Banner.module.css
+++ b/styles/components/Banner.module.css
@@ -24,6 +24,7 @@
     border: 10px solid currentColor;
 
     max-width: 90vw;
+    text-align: center;
 }
 
 @media screen and (max-width: 768px) {
